modify Copyright with present